Concluindo o CRUD de Cliente e fazendo os testes unitários